--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/by-sequence/mode-edit.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/by-sequence/mode-edit.tml
@@ -84,7 +84,10 @@
 	
 			<ul id="cs-list" class="sortable">
 				<tml:foreach item="_dbs" currentvalue="_db">
-					<li data-uid="<tml:script expression="_db.uid"/>" class="ui-state-default"><tml:script expression="_db.title"/></li>
+					<li data-uid="<tml:script expression="_db.uid"/>" class="ui-state-default" <tml:case condition="!_db.enabled">style="color:silver;font-style:italic"</tml:case>>
+						<div style="display:inline-block;width:30%"><tml:script expression="_db.key"/></div>
+						<tml:script expression="_db.title"/>
+					</li>
 				</tml:foreach>
 			</ul>
 			
